# CProject2

./: CMakeLists.txt  Config.c  Config.h  FileManagement.c  FileManagement.h  FindFiles.c  FindFiles.h  GlobToRegex.c  GlobToRegex.h  Makefile  UpdateFiles.c  UpdateFiles.h  config.c  config.h  find_files.c  find_files.h  main.c  main.h  updateFiles.c  updateFiles.h
directory1/: .a_hidden_config_file.config
directory2/: myFileTwo.txt
directory3/recursive/file/: structure.txt
